defined functions, added documentation

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -47,16 +47,64 @@
     }
    ],
    "source": [
-    "\"\"\"\n",
-    "coordExp: a list of tuples (x,y). The points received from the \"indoors-gps\"\n",
-    "return: the total area difference betweeen the theoretical trajectory and the experimental one.\n",
-    "\"\"\"\n",
     "def trajectoryError(coordExp):\n",
-    "    # define the experimental trajectory\n",
+    "    \"\"\"\n",
+    "    arg1 coordExp: a list of tuples (x,y). The points received from the \"indoors-gps\"\n",
+    "    return: error, the total area difference betweeen the theoretical trajectory and the experimental one divided by the distance.\n",
+    "    \"\"\"\n",
+    "    # create intermediary points the ortogonal-projection to the theoretical trajectory\n",
+    "    \n",
+    "    # create intermediary points at the interjections of the two trajectories\n",
+    "    \n",
+    "    # identify trapezoid -> two points on the theoretical trajectory, 2 points on the experiemental trajcetory\n",
+    "    \n",
+    "    # add the area of the trapezoid to the total error.\n",
+    "    \n",
+    "    # repeat until you the whole trajectory is computed\n",
+    "    \n",
+    "    error = area / distnace\n",
+    "    \n",
+    "    return error\n",
+    "\n",
+    "def intersection(x_1, x_2, y_1, y_2):\n",
+    "    \"\"\"\n",
+    "    arg1,2 x_i: A tuple, the coordiantes of a point on the theoretical trajectory\n",
+    "    arg3,4 y_i: A tuple, the coordiantes of a point on the experimental trajectory\n",
+    "    return: intersect. A tuple, the coordinates of the intersection or null.\n",
+    "    \"\"\"\n",
+    "    intersect = None\n",
     "    \n",
     "    # TODO\n",
     "    \n",
-    "    return error"
+    "    return intersect\n",
+    "\n",
+    "def ortogonalProjection(x_1, x_2, y):\n",
+    "    \"\"\"\n",
+    "    arg1,2 x_i: A tuple, the coordiantes of a point on the theoretical trajectory\n",
+    "    arg3 y: A tuple, the coordiantes of a point on the experimental trajectory\n",
+    "    return: newPoint. A tuple, the coordinates of the orthogonal projection on y on the segment [x_1,x_2]\n",
+    "    \"\"\"\n",
+    "    newPoint = (0,0)\n",
+    "    \n",
+    "    # TODO\n",
+    "    \n",
+    "    return newPoint\n",
+    "\n",
+    "def computeArea(x_1, x_2, y_1, y_2):\n",
+    "    \"\"\" \n",
+    "    arg1,2 x_i: A tuple, the coordiantes of a point on the theoretical trajectory\n",
+    "    arg3,4 y_i: A tuple, the coordiantes of a point on the experimental trajectory\n",
+    "    return: area. An int, the area of the figure formed by the 4 coordinates\n",
+    "    \"\"\"\n",
+    "    area = 0\n",
+    "    \n",
+    "    # case 1: only two points -> return 0\n",
+    "    \n",
+    "    # case 2: if two points are equal -> triangle\n",
+    "    \n",
+    "    # case 3: all point distinct -> trapezoid\n",
+    "    \n",
+    "    return area"
    ]
   }
  ],
