Defined functions calculating length.

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -12,14 +12,25 @@
     "\n",
     "## Solution: \n",
     "_Divide and Conquer !_\n",
-    "Divise the problem when:\n",
+    "Divide the problem when:\n",
     "- change of segment in the theoretical trajectory\n",
-    "- intersection of the theoretical and expereimental trajectories\n",
-    "- reach a _summit_ in the experimental trajectory\n",
+    "- intersection of the theoretical and experimental trajectories\n",
+    "- reach a _vertex_ in the experimental trajectory\n",
     "\n",
     "How to calculate the error:\n",
     "__The sum of the areas of the \"Trapezoid\" formed by two points on the theoretical trajectory and two points of the experimental trajectory__\n",
-    "o When two points from the experimental and theoretical trajectories are equals, the are is a triangle. "
+    "o When two points from the experimental and theoretical trajectories are equals, the area is a triangle. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#imports\n",
+    "\n",
+    "import numpy as np"
    ]
   },
   {
@@ -47,11 +58,13 @@
     }
    ],
    "source": [
-    "def trajectoryError(coordExp):\n",
+    "def trajectoryError(coordTh,coordExp):\n",
     "    \"\"\"\n",
-    "    arg1 coordExp: a list of tuples (x,y). The points received from the \"indoors-gps\"\n",
+    "    arg1 coordTh : a list of tuples (x,y). The path which should be followed.\n",
+    "    arg2 coordExp: a list of tuples (x,y). The points received from the \"indoors-gps\"\n",
     "    return: error, the total area difference betweeen the theoretical trajectory and the experimental one divided by the distance.\n",
     "    \"\"\"\n",
+    "    #assert [the type is ok]\n",
     "    # create intermediary points the ortogonal-projection to the theoretical trajectory\n",
     "    \n",
     "    # create intermediary points at the interjections of the two trajectories\n",
@@ -62,14 +75,36 @@
     "    \n",
     "    # repeat until you the whole trajectory is computed\n",
     "    \n",
-    "    error = area / distnace\n",
+    "    error = area / distance\n",
     "    \n",
     "    return error\n",
     "\n",
+    "\n",
+    "def seg_length(x_1,x_2):\n",
+    "    \"\"\"\n",
+    "    arg1 x_1 : A tuple, the coordinates of the first point of the segment\n",
+    "    arg2 x_2 : A tuple, the coordinates of the second point of the segment\n",
+    "    return : A float, the length of the segment made up by x_1 and x_2\n",
+    "    \"\"\"\n",
+    "    return(np.sqrt((x_1[0]-x_2[0])**2 + (x_1[1]-x_2[1])**2))\n",
+    "\n",
+    "\n",
+    "def path_length(path):\n",
+    "    \"\"\"\n",
+    "    arg1 path : A table of tuples, each tuple representing the coordinates of a point of the path.\n",
+    "    return : leng. A float, \n",
+    "    \"\"\"\n",
+    "    assert len(path) > 1\n",
+    "    leng = 0\n",
+    "    for i in range(len(path)-1):\n",
+    "        leng += seg_length(path[i],path[i+1])\n",
+    "    return(leng)\n",
+    "\n",
+    "\n",
     "def intersection(x_1, x_2, y_1, y_2):\n",
     "    \"\"\"\n",
-    "    arg1,2 x_i: A tuple, the coordiantes of a point on the theoretical trajectory\n",
-    "    arg3,4 y_i: A tuple, the coordiantes of a point on the experimental trajectory\n",
+    "    arg1,2 x_i: A tuple, the coordinates of a point on the theoretical trajectory\n",
+    "    arg3,4 y_i: A tuple, the coordinates of a point on the experimental trajectory\n",
     "    return: intersect. A tuple, the coordinates of the intersection or null.\n",
     "    \"\"\"\n",
     "    intersect = None\n",
@@ -78,10 +113,11 @@
     "    \n",
     "    return intersect\n",
     "\n",
+    "\n",
     "def ortogonalProjection(x_1, x_2, y):\n",
     "    \"\"\"\n",
-    "    arg1,2 x_i: A tuple, the coordiantes of a point on the theoretical trajectory\n",
-    "    arg3 y: A tuple, the coordiantes of a point on the experimental trajectory\n",
+    "    arg1,2 x_i: A tuple, the coordinates of a point on the theoretical trajectory\n",
+    "    arg3 y: A tuple, the coordinates of a point on the experimental trajectory\n",
     "    return: newPoint. A tuple, the coordinates of the orthogonal projection on y on the segment [x_1,x_2]\n",
     "    \"\"\"\n",
     "    newPoint = (0,0)\n",
@@ -90,12 +126,21 @@
     "    \n",
     "    return newPoint\n",
     "\n",
+    "\n",
     "def computeArea(x_1, x_2, y_1, y_2):\n",
     "    \"\"\" \n",
-    "    arg1,2 x_i: A tuple, the coordiantes of a point on the theoretical trajectory\n",
-    "    arg3,4 y_i: A tuple, the coordiantes of a point on the experimental trajectory\n",
+    "    arg1,2 x_i: A tuple, the coordinates of a point on the theoretical trajectory\n",
+    "    arg3,4 y_i: A tuple, the coordinates of a point on the experimental trajectory\n",
     "    return: area. An int, the area of the figure formed by the 4 coordinates\n",
     "    \"\"\"\n",
+    "    # Assert the arguments really form a trapezoid, with (x_1,y_1) being parallel with (x_2,y_2)\n",
+    "    ## Particular case where the xs are the same : vertical lines\n",
+    "    \n",
+    "    \n",
+    "    ## Other case : equality of the slopes\n",
+    "    \n",
+    "    \n",
+    "    # Computing the area\n",
     "    area = 0\n",
     "    \n",
     "    # case 1: only two points -> return 0\n",
