--- a/solution.ipynb
+++ b/solution.ipynb
@@ -90,7 +90,7 @@
     "    \"\"\"\n",
     "    intersect = None\n",
     "    \n",
-    "    # TODO\n",
+    "    # express the line passing by x_1 and x_2\n",
     "    \n",
     "    return intersect\n",
     "\n",
@@ -103,7 +103,8 @@
     "    \"\"\"\n",
     "    newPoint = (0,0)\n",
     "    \n",
-    "    # TODO\n",
+    "    ## express the line passing by x_1 and x_2\n",
+    "    ## line = (x_2[1]-x_1[1])/(x_2[0]-x_1[0])\n",
     "    \n",
     "    return newPoint\n",
     "\n",
