--- a/test.ipynb
+++ b/test.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -97,12 +97,12 @@
      "text": [
       "E\n",
       "======================================================================\n",
-      "ERROR: C:\\Users\\Zotto\\AppData\\Roaming\\jupyter\\runtime\\kernel-6c7f25bf-55dc-4497-8309-4b3c8382552f (unittest.loader._FailedTest)\n",
+      "ERROR: C:\\Users\\Zotto\\AppData\\Roaming\\jupyter\\runtime\\kernel-f8e032b9-1f4e-4678-b250-6f44d4836cf7 (unittest.loader._FailedTest)\n",
       "----------------------------------------------------------------------\n",
-      "AttributeError: module '__main__' has no attribute 'C:\\Users\\Zotto\\AppData\\Roaming\\jupyter\\runtime\\kernel-6c7f25bf-55dc-4497-8309-4b3c8382552f'\n",
+      "AttributeError: module '__main__' has no attribute 'C:\\Users\\Zotto\\AppData\\Roaming\\jupyter\\runtime\\kernel-f8e032b9-1f4e-4678-b250-6f44d4836cf7'\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.006s\n",
       "\n",
       "FAILED (errors=1)\n"
      ]
@@ -391,7 +391,7 @@
     "        \n",
     "        assertEqual((0,1), intersection(segA_1, segA_2, segB_1, segB_2))# expected (0,1)\n",
     "        \n",
-    "    #def test_TODO(self):\n",
+    "    #def test_intersectingPaths(self):\n",
     "        #TODO\n",
     "        \n",
     "# launch unit tests\n",
