added ideas for testing

--- a/test.ipynb
+++ b/test.ipynb
@@ -181,7 +181,11 @@
     "        \n",
     "        assertEqual(0.75, solution.trajectoryError(theo, expe))# Difference expected : 0.75\n",
     "        \n",
-    "    # Test 7 : when starting point and \n",
+    "    # Test 7 : when starting point and last point are the same\n",
+    "    \n",
+    "    # Test 8 : 2 crossings\n",
+    "    \n",
+    "    # Test 9 : crossing with UTurn\n",
     "        \n",
     "# launch unit tests\n",
     "unittest.main() # -> AttributeError: module '__main__' has no attribute 'C:\\Users\\Zotto\\AppData\\Roaming\\jupyter\\runtime\\kernel-6c7f25bf-55dc-4497-8309-4b3c8382552f'\n",
