--- a/solution.ipynb
+++ b/solution.ipynb
@@ -45,7 +45,9 @@
     "    arg2 coordExp: a list of tuples (x,y). The points received from the \"indoors-gps\"\n",
     "    return: error, the total area difference betweeen the theoretical trajectory and the experimental one divided by the distance.\n",
     "    \"\"\"\n",
-    "    #assert [the type is ok]\n",
+    "    # compute total path length\n",
+    "    totalLength = path_length(coordTh)\n",
+    "    \n",
     "    # create intermediary points the ortogonal-projection to the theoretical trajectory\n",
     "    \n",
     "    # create intermediary points at the interjections of the two trajectories\n",
