Defined orthogonal projection and started intersection

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -30,7 +30,8 @@
    "source": [
     "#imports\n",
     "\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import numpy.linalg as lin"
    ]
   },
   {
@@ -89,10 +90,19 @@
     "    arg1,2 x_i: A tuple, the coordinates of a point on the theoretical trajectory\n",
     "    arg3,4 y_i: A tuple, the coordinates of a point on the experimental trajectory\n",
     "    return: intersect. A tuple, the coordinates of the intersection or null.\n",
+    "    Remark : if the intersection is not in the two segments, returns None.\n",
     "    \"\"\"\n",
     "    intersect = None\n",
+    "    # First case : the two lines are vertical\n",
     "    \n",
-    "    # express the line passing by x_1 and x_2\n",
+    "    # Second case : only the first line is vertical\n",
+    "    \n",
+    "    # Second case : only the second line is vertical\n",
+    "    \n",
+    "    # Third case : general case\n",
+    "    ## express the two lines' equations, solve the system\n",
+    "    \n",
+    "    # If a point is found, check if it belongs to the segments and not only the lines (x_1[0]<intersect[0]<x_2[0] or...)\n",
     "    \n",
     "    return intersect\n",
     "\n",
@@ -103,6 +113,28 @@
     "    arg3 y: A tuple, the coordinates of a point on the experimental trajectory\n",
     "    return: newPoint. A tuple, the coordinates of the orthogonal projection on y on the segment [x_1,x_2]\n",
     "    \"\"\"\n",
+    "    \n",
+    "    if x_1[0] == x_2[0] :\n",
+    "    # First case : the line containing x_1 and x_2 is vertical\n",
+    "        newPoint = (x_1[0],y[1])\n",
+    "        \n",
+    "    else :\n",
+    "    # Second case : the line containing x_1 and x_2 is not vertical\n",
+    "        a = (x_2[1]-x_1[1])/(x_2[0]-x_1[0])\n",
+    "        b = x_1[1] - a * x_1[0]\n",
+    "        # Now we know the line containing x_1 and x_2 has the equation y = a * x + b\n",
+    "        # So a normal vector to this line is (a,-1)\n",
+    "        # This vector is directing the normal line passing by the point y and its equation is -x + a*y + c = 0 :\n",
+    "        # let's find c!\n",
+    "        c = y[0] + a*y[1]\n",
+    "        # Now the intersection point is the point (x,y) which verifies :\n",
+    "        # a*x - y = -b\n",
+    "        # -x + a*y = -c\n",
+    "        mat = np.array([a,-1],[-1,a])\n",
+    "        point = np.dot(lin.inv(mat)*,np.array([-b,-c])\n",
+    "\n",
+    "        newPoint = (point[0],point[1])\n",
+    "        \n",
     "    newPoint = (0,0)\n",
     "    \n",
     "    ## express the line passing by x_1 and x_2\n",
@@ -118,6 +150,8 @@
     "    return: area. An int, the area of the figure formed by the 4 coordinates\n",
     "    \"\"\"\n",
     "    # Assert the arguments really form a trapezoid, with (x_1,y_1) being parallel with (x_2,y_2)\n",
+    "    \n",
+    "                       \n",
     "    ## Particular case where the xs are the same : vertical lines\n",
     "    \n",
     "    \n",
