oracle  testing part 1

--- a/test.ipynb
+++ b/test.ipynb
@@ -88,6 +88,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Oracle tests\n",
+    "# Oracles are found on https://github.com/rouvoy/indoor-location-oracles\n",
+    "\n",
+    "def oracleParser(\"filepath\"):\n",
+    "    \"\"\"\n",
+    "    Text parser reading the oracle files and converting it's content to lists of tuples\n",
+    "    \"\"\"\n",
+    "    # define results:\n",
+    "    theoreticalPath = []\n",
+    "    experimentalPath = []\n",
+    "    # fetch the file\n",
+    "    oracle = open(file_name,mode='r')\n",
+    "    # extract data\n",
+    "    theoreticalXAxis = oracle.readline()\n",
+    "    theoreticalYAxis = oracle.readline()\n",
+    "    experimentalXAxis = oracle.readline()\n",
+    "    experimentalYAxis = oracle.readline()\n",
+    "    expectedResult = oracle.readline()\n",
+    "    error = oracle.readline()\n",
+    "    # process the strings\n",
+    "    theoreticalXAxis = [int(x) for x in theoreticalXAxis.split(\",\")]\n",
+    "    theoreticalYAxis = [int(x) for x in theoreticalYAxis.split(\",\")]\n",
+    "    for i in range(len(theoreticalXAxis)):\n",
+    "        theoreticalPath.append((theoreticalXAxis[i],theoreticalYAxis[i]))\n",
+    "    for i in range(len(experimentalXAxis)):\n",
+    "        experimentalPath.append((experimentalXAxis[i],experimentalYAxis[i]))\n",
+    "    expectedResult = parseNumeral(expectedResult)\n",
+    "    error = parseNumeral(error)\n",
+    "    # returns\n",
+    "    return theoreticalPath, experimentalPath, expectedResult, error\n",
+    "    \n",
+    "def parseNumeral(strValue):\n",
+    "    \"\"\"\n",
+    "    Transforms a string to the appropriate type\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        return = int(s)\n",
+    "    except ValueError:\n",
+    "        return = float(s)\n",
+    "    \n",
+    "def performOracleTest(oracle):\n",
+    "    \"\"\"\n",
+    "    Perform oracle test\n",
+    "    \"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Unit tesing using the unittest.py module__"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -126,14 +185,6 @@
     }
    ],
    "source": [
-    "## old format ->\n",
-    "## -> When the real path follows the theoretical path\n",
-    "## -> theo = [(0,x) for x in range(5)]\n",
-    "## -> expe = [(0,x) for x in range(5)]\n",
-    "\n",
-    "## -> Expected : error = 0\n",
-    "## -> displ(theo,expe)\n",
-    "\n",
     "class TestTrajectoryError(unittest.TestCase):\n",
     "    \"\"\"\n",
     "    Unit testing code for the trajectoryError brick. Each test case represent a scenario with it unique theoretical and experimental trajectories.\n",
@@ -393,10 +444,14 @@
     "        segA_2 = (0,2)\n",
     "        y = (1,1)\n",
     "        \n",
-    "        assertEqual((0,1), intersection(segA_1, segA_2, segB_1, segB_2))# expected (0,1)\n",
+    "        assertEqual((0,1), ortogonalProjection(segA_1, segA_2, y))# expected (0,1)\n",
     "        \n",
-    "    #def test_intersectingPaths(self):\n",
-    "        #TODO\n",
+    "    def test_intersectingPaths(self):\n",
+    "        segA_1 = (0,0)\n",
+    "        segA_2 = (0,2)\n",
+    "        y = (0,1)\n",
+    "        \n",
+    "        assertEqual((0,1), ortogonalProjection(segA_1, segA_2, y))# expected (0,1)\n",
     "        \n",
     "# launch unit tests\n",
     "unittest.main()"
@@ -453,7 +508,7 @@
     "        segB_1 = (0,0)\n",
     "        segB_2 = (2,2)\n",
     "        \n",
-    "        assertEqual(0, intersection(segA_1, segA_2, segB_1, segB_2))# expected 0\n",
+    "        assertEqual(0, computeArea(segA_1, segA_2, segB_1, segB_2))# expected 0\n",
     "        \n",
     "    def test_square(self):\n",
     "        segA_1 = (0,0)\n",
@@ -461,7 +516,7 @@
     "        segB_1 = (1,1)\n",
     "        segB_2 = (1,0)\n",
     "        \n",
-    "        assertEqual(1, intersection(segA_1, segA_2, segB_1, segB_2))# expected 1\n",
+    "        assertEqual(1, computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1\n",
     "    \n",
     "    def test_triangle(self):\n",
     "        segA_1 = (0,0)\n",
@@ -469,7 +524,7 @@
     "        segB_1 = (1,1)\n",
     "        segB_2 = (0,0)\n",
     "        \n",
-    "        assertEqual(0.5, intersection(segA_1, segA_2, segB_1, segB_2))# expected 1\n",
+    "        assertEqual(0.5, computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1\n",
     "    \n",
     "    def test_trapezoidSimplest(self):\n",
     "        segA_1 = (0,0)\n",
@@ -477,7 +532,7 @@
     "        segB_1 = (1,1)\n",
     "        segB_2 = (2,0)\n",
     "        \n",
-    "        assertEqual(1.5, intersection(segA_1, segA_2, segB_1, segB_2))# expected 1.5\n",
+    "        assertEqual(1.5, computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1.5\n",
     "        \n",
     "    def test_trapezoidNegative(self):\n",
     "        segA_1 = (0,0)\n",
@@ -485,7 +540,7 @@
     "        segB_1 = (-1,-1)\n",
     "        segB_2 = (-2,0)\n",
     "        \n",
-    "        assertEqual(1.5, intersection(segA_1, segA_2, segB_1, segB_2))# expected 1.5\n",
+    "        assertEqual(1.5, computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1.5\n",
     "        \n",
     "    def test_trapezoidNegativePositive(self):\n",
     "        segA_1 = (-1,-1)\n",
@@ -493,7 +548,7 @@
     "        segB_1 = (1,1)\n",
     "        segB_2 = (2,-1)\n",
     "        \n",
-    "        assertEqual(10.5, intersection(segA_1, segA_2, segB_1, segB_2))# expected 10.5\n",
+    "        assertEqual(10.5, computeArea(segA_1, segA_2, segB_1, segB_2))# expected 10.5\n",
     "        \n",
     "# launch unit tests\n",
     "unittest.main()"
