almost completed oracle testing functions

--- a/test.ipynb
+++ b/test.ipynb
@@ -98,6 +98,12 @@
     "def oracleParser(\"filepath\"):\n",
     "    \"\"\"\n",
     "    Text parser reading the oracle files and converting it's content to lists of tuples\n",
+    "    \n",
+    "    arg1: filepath. A string, the path to the file containing the oracle test to read.\n",
+    "    return: theoreticalPath. A list of tuples, the coordiantes of the theretical path.\n",
+    "            experimentalPath. A list of tuples, the coordiantes of the experimental path.\n",
+    "            expectedResult. An int or a float, the expected result computed by trajectoryError().\n",
+    "            error. An int or a float, the error allowed on the computation.\n",
     "    \"\"\"\n",
     "    # define results:\n",
     "    theoreticalPath = []\n",
@@ -125,17 +131,38 @@
     "    \n",
     "def parseNumeral(strValue):\n",
     "    \"\"\"\n",
-    "    Transforms a string to the appropriate type\n",
+    "    Transforms a string value to the appropriate numeral type.\n",
+    "    \n",
+    "    arg1: strValue. A string, a numerical value.\n",
+    "    return: An int or a float, The value.\n",
     "    \"\"\"\n",
     "    try:\n",
     "        return = int(s)\n",
     "    except ValueError:\n",
     "        return = float(s)\n",
     "    \n",
-    "def performOracleTest(oracle):\n",
+    "def performOracleTest(oracleFile):\n",
     "    \"\"\"\n",
     "    Perform oracle test\n",
-    "    \"\"\""
+    "    \n",
+    "    arg1: oracleFile. A string, the filepath to the oracle.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # step 1: read the oracle and extract its data:\n",
+    "    theoreticalPath, experimentalPath, expectedResult, error = oracleParser(oracleFile)\n",
+    "    \n",
+    "    # step 2: compute the error on the trajectory:\n",
+    "    myResults = trajectoryError(theoreticalPath, experimentalPath)\n",
+    "    \n",
+    "    # step 3: compare test results:\n",
+    "    if myResults in range(expectedResult-error, expectedResult+error):\n",
+    "        ## test successfull\n",
+    "            #TODO\n",
+    "    else:\n",
+    "        ## test failed\n",
+    "            #TODO\n",
+    "    # display\n",
+    "    displ(theo,expe)"
    ]
   },
   {
