--- a/test.ipynb
+++ b/test.ipynb
@@ -22,7 +22,6 @@
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "## TODO\n",
     "import unittest\n",
     "\n",
     "import solution ## the solution notebook exported as a script"
@@ -88,14 +87,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-6-460049c32047>, line 67)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-6-460049c32047>\"\u001b[1;36m, line \u001b[1;32m67\u001b[0m\n\u001b[1;33m    else:\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
+     ]
+    }
+   ],
    "source": [
     "# Oracle tests\n",
     "# Oracles are found on https://github.com/rouvoy/indoor-location-oracles\n",
     "\n",
-    "def oracleParser(\"filepath\"):\n",
+    "def oracleParser(filepath):\n",
     "    \"\"\"\n",
     "    Text parser reading the oracle files and converting it's content to lists of tuples\n",
     "    \n",
@@ -137,9 +145,9 @@
     "    return: An int or a float, The value.\n",
     "    \"\"\"\n",
     "    try:\n",
-    "        return = int(s)\n",
+    "        return int(s)\n",
     "    except ValueError:\n",
-    "        return = float(s)\n",
+    "        return float(s)\n",
     "    \n",
     "def performOracleTest(oracleFile):\n",
     "    \"\"\"\n",
@@ -174,43 +182,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "E\n",
-      "======================================================================\n",
-      "ERROR: C:\\Users\\Zotto\\AppData\\Roaming\\jupyter\\runtime\\kernel-f8e032b9-1f4e-4678-b250-6f44d4836cf7 (unittest.loader._FailedTest)\n",
-      "----------------------------------------------------------------------\n",
-      "AttributeError: module '__main__' has no attribute 'C:\\Users\\Zotto\\AppData\\Roaming\\jupyter\\runtime\\kernel-f8e032b9-1f4e-4678-b250-6f44d4836cf7'\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.006s\n",
-      "\n",
-      "FAILED (errors=1)\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "True",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m True\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Zotto\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3304: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class TestTrajectoryError(unittest.TestCase):\n",
     "    \"\"\"\n",
@@ -272,43 +246,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "E\n",
-      "======================================================================\n",
-      "ERROR: C:\\Users\\Zotto\\AppData\\Roaming\\jupyter\\runtime\\kernel-6c7f25bf-55dc-4497-8309-4b3c8382552f (unittest.loader._FailedTest)\n",
-      "----------------------------------------------------------------------\n",
-      "AttributeError: module '__main__' has no attribute 'C:\\Users\\Zotto\\AppData\\Roaming\\jupyter\\runtime\\kernel-6c7f25bf-55dc-4497-8309-4b3c8382552f'\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
-      "\n",
-      "FAILED (errors=1)\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "True",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m True\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Zotto\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3304: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class TestPathLength(unittest.TestCase):\n",
     "    \"\"\"\n",
@@ -350,43 +290,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "E\n",
-      "======================================================================\n",
-      "ERROR: C:\\Users\\Zotto\\AppData\\Roaming\\jupyter\\runtime\\kernel-6c7f25bf-55dc-4497-8309-4b3c8382552f (unittest.loader._FailedTest)\n",
-      "----------------------------------------------------------------------\n",
-      "AttributeError: module '__main__' has no attribute 'C:\\Users\\Zotto\\AppData\\Roaming\\jupyter\\runtime\\kernel-6c7f25bf-55dc-4497-8309-4b3c8382552f'\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
-      "\n",
-      "FAILED (errors=1)\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "True",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m True\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Zotto\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3304: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class TestIntersection(unittest.TestCase):\n",
     "    \"\"\"\n",
@@ -423,43 +329,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "E\n",
-      "======================================================================\n",
-      "ERROR: C:\\Users\\Zotto\\AppData\\Roaming\\jupyter\\runtime\\kernel-6c7f25bf-55dc-4497-8309-4b3c8382552f (unittest.loader._FailedTest)\n",
-      "----------------------------------------------------------------------\n",
-      "AttributeError: module '__main__' has no attribute 'C:\\Users\\Zotto\\AppData\\Roaming\\jupyter\\runtime\\kernel-6c7f25bf-55dc-4497-8309-4b3c8382552f'\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "FAILED (errors=1)\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "True",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m True\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Zotto\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3304: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class TestOrthoProjection(unittest.TestCase):\n",
     "    \"\"\"\n",
@@ -486,43 +358,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "E\n",
-      "======================================================================\n",
-      "ERROR: C:\\Users\\Zotto\\AppData\\Roaming\\jupyter\\runtime\\kernel-6c7f25bf-55dc-4497-8309-4b3c8382552f (unittest.loader._FailedTest)\n",
-      "----------------------------------------------------------------------\n",
-      "AttributeError: module '__main__' has no attribute 'C:\\Users\\Zotto\\AppData\\Roaming\\jupyter\\runtime\\kernel-6c7f25bf-55dc-4497-8309-4b3c8382552f'\n",
-      "\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "FAILED (errors=1)\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "True",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m True\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Zotto\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3304: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class TestComputeArea(unittest.TestCase):\n",
     "    \"\"\"\n",
