--- a/test.ipynb
+++ b/test.ipynb
@@ -24,7 +24,7 @@
     "import numpy as np\n",
     "import unittest\n",
     "\n",
-    "import solution ## the solution notebook exported as a script"
+    "import solution as sl ## the solution notebook exported as a script"
    ]
   },
   {
@@ -87,18 +87,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-6-460049c32047>, line 67)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-6-460049c32047>\"\u001b[1;36m, line \u001b[1;32m67\u001b[0m\n\u001b[1;33m    else:\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Oracle tests\n",
     "# Oracles are found on https://github.com/rouvoy/indoor-location-oracles\n",
@@ -165,10 +156,10 @@
     "    # step 3: compare test results:\n",
     "    if myResults in range(expectedResult-error, expectedResult+error):\n",
     "        ## test successfull\n",
-    "            #TODO\n",
+    "        print(\"Success\")\n",
     "    else:\n",
     "        ## test failed\n",
-    "            #TODO\n",
+    "        print(\"Failure\")\n",
     "    # display\n",
     "    displ(theo,expe)"
    ]
@@ -182,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,57 +187,53 @@
     "        expe = [(0,x) for x in range(5)]\n",
     "        #displ(theo,expe)\n",
     "        \n",
-    "        assertEqual(0, solution.trajectoryError(theo, expe))# Difference expected : 0\n",
+    "        self.assertEqual(0, sl.trajectoryError(theo, expe))# Difference expected : 0\n",
     "    \n",
     "    def test_equalPathsWithUTurn(self): # -> Test 2\n",
     "        theo = [(0,2),(1,2),(1,0),(0,0)]\n",
     "        expe = [(0,2),(1,2),(1,0),(0,0)]\n",
     "        #displ(theo,expe)\n",
     "        \n",
-    "        assertEqual(0, solution.trajectoryError(theo, expe))# Difference expected : 0\n",
+    "        self.assertEqual(0, sl.trajectoryError(theo, expe))# Difference expected : 0\n",
     "        \n",
     "    def test_straightParallel(self): # -> Test 3\n",
     "        theo = [(0,x) for x in range(5)]\n",
     "        expe = [(1,x) for x in range(5)]\n",
     "        #displ(theo,expe)\n",
     "        \n",
-    "        assertEqual(1, solution.trajectoryError(theo, expe))# Difference expected : (area = 4 )/ (length = 4) = 1\n",
+    "        self.assertEqual(1, sl.trajectoryError(theo, expe))# Difference expected : (area = 4 )/ (length = 4) = 1\n",
     "\n",
     "    def test_straightCrossing(self): # -> Test 4\n",
     "        theo = [(0,0),(0,1)]\n",
     "        expe = [(1,0),(-1,1)]\n",
     "        #displ(theo,expe)\n",
     "        \n",
-    "        assertEqual(0.5, solution.trajectoryError(theo, expe))# Difference expected : 0.5\n",
+    "        self.assertEqual(0.5, sl.trajectoryError(theo, expe))# Difference expected : 0.5\n",
     "        \n",
     "    def test_differentLength(self): # -> Test 5\n",
     "        theo = [(0,0),(5,0)]\n",
     "        expe = [(0,0)] + [(x,1) for x in range(6)] + [(5,0)]\n",
     "        #displ(theo,expe)\n",
     "        \n",
-    "        assertEqual(1, solution.trajectoryError(theo, expe))# Difference expected : 1\n",
+    "        self.assertEqual(1, sl.trajectoryError(theo, expe))# Difference expected : 1\n",
     "\n",
     "    def test_differentLengthCrossing(self): # -> Test 6\n",
     "        theo = [(0,0),(0,2)]\n",
     "        expe = [(0,0),(1,0),(-1,1),(1,2),(0,2)]\n",
     "        #displ(theo,expe)\n",
     "        \n",
-    "        assertEqual(0.75, solution.trajectoryError(theo, expe))# Difference expected : 0.75\n",
+    "        self.assertEqual(0.75, sl.trajectoryError(theo, expe))# Difference expected : 0.75\n",
     "        \n",
     "    # Test 7 : when starting point and last point are the same\n",
     "    \n",
     "    # Test 8 : 2 crossings\n",
     "    \n",
-    "    # Test 9 : crossing with UTurn\n",
-    "        \n",
-    "# launch unit tests\n",
-    "unittest.main() # -> AttributeError: module '__main__' has no attribute 'C:\\Users\\Zotto\\AppData\\Roaming\\jupyter\\runtime\\kernel-6c7f25bf-55dc-4497-8309-4b3c8382552f'\n",
-    "#                      ^voir avec prof"
+    "    # Test 9 : crossing with UTurn\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,31 +253,29 @@
     "        a = (0,0)\n",
     "        b = (1,0)\n",
     "        \n",
-    "        assertEqual(1, seg_length(a,b))# expected 1\n",
+    "        self.assertEqual(1, sl.seg_length(a,b))# expected 1\n",
     "        \n",
     "    def test_simplestSegmentInverted(self):\n",
     "        a = (0,0)\n",
     "        b = (1,0)\n",
     "        \n",
-    "        assertEqual(1, seg_length(b,a))# expected 1\n",
+    "        self.assertEqual(1, sl.seg_length(b,a))# expected 1\n",
     "        \n",
     "    def test_simplestPath(self):\n",
     "        path = [(0,0),(0,1),(1,1)]\n",
     "        \n",
-    "        assertEqual(2, path_length(path))# expected 2\n",
+    "        self.assertEqual(2, sl.path_length(path))# expected 2\n",
     "        \n",
     "    def test_simplestPathInverted(self):\n",
     "        invPath = [(0,0),(0,-1),(-1,-1)]\n",
     "        \n",
-    "        assertEqual(2, path_length(invPath))# expected 2\n",
-    "        \n",
-    "# launch unit tests\n",
-    "unittest.main()"
+    "        self.assertEqual(2, sl.path_length(invPath))# expected 2\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +290,7 @@
     "        segB_1 = (0,2)\n",
     "        segB_2 = (2,0)\n",
     "        \n",
-    "        assertEqual((1,1), intersection(segA_1, segA_2, segB_1, segB_2))# expected (1,1)\n",
+    "        self.assertEqual((1,1), sl.intersection(segA_1, segA_2, segB_1, segB_2))# expected (1,1)\n",
     "        \n",
     "    def test_noIntersection(self):\n",
     "        segA_1 = (0,0)\n",
@@ -313,7 +298,7 @@
     "        segB_1 = (1,0)\n",
     "        segB_2 = (1,1)\n",
     "        \n",
-    "        assertEqual(None, intersection(segA_1, segA_2, segB_1, segB_2))# expected None\n",
+    "        self.assertEqual(None, sl.intersection(segA_1, segA_2, segB_1, segB_2))# expected None\n",
     "        \n",
     "    def test_commonPoint(self):\n",
     "        segA_1 = (0,0)\n",
@@ -321,15 +306,12 @@
     "        segB_1 = (0,0)\n",
     "        segB_2 = (0,-1)\n",
     "        \n",
-    "        assertEqual((0,0), intersection(segA_1, segA_2, segB_1, segB_2))# expected (0,0)\n",
-    "        \n",
-    "# launch unit tests\n",
-    "unittest.main()"
+    "        self.assertEqual((0,0), sl.intersection(segA_1, segA_2, segB_1, segB_2))# expected (0,0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,22 +325,20 @@
     "        segA_2 = (0,2)\n",
     "        y = (1,1)\n",
     "        \n",
-    "        assertEqual((0,1), ortogonalProjection(segA_1, segA_2, y))# expected (0,1)\n",
+    "        self.assertEqual((0,1), sl.ortogonalProjection(segA_1, segA_2, y))# expected (0,1)\n",
     "        \n",
     "    def test_intersectingPaths(self):\n",
     "        segA_1 = (0,0)\n",
     "        segA_2 = (0,2)\n",
     "        y = (0,1)\n",
     "        \n",
-    "        assertEqual((0,1), ortogonalProjection(segA_1, segA_2, y))# expected (0,1)\n",
-    "        \n",
-    "# launch unit tests\n",
-    "unittest.main()"
+    "        self.assertEqual((0,1), sl.ortogonalProjection(segA_1, segA_2, y))# expected (0,1)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +353,7 @@
     "        segB_1 = (0,0)\n",
     "        segB_2 = (2,2)\n",
     "        \n",
-    "        assertEqual(0, computeArea(segA_1, segA_2, segB_1, segB_2))# expected 0\n",
+    "        self.assertEqual(0, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 0\n",
     "        \n",
     "    def test_square(self):\n",
     "        segA_1 = (0,0)\n",
@@ -381,7 +361,7 @@
     "        segB_1 = (1,1)\n",
     "        segB_2 = (1,0)\n",
     "        \n",
-    "        assertEqual(1, computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1\n",
+    "        self.assertEqual(1, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1\n",
     "    \n",
     "    def test_triangle(self):\n",
     "        segA_1 = (0,0)\n",
@@ -389,7 +369,7 @@
     "        segB_1 = (1,1)\n",
     "        segB_2 = (0,0)\n",
     "        \n",
-    "        assertEqual(0.5, computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1\n",
+    "        self.assertEqual(0.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1\n",
     "    \n",
     "    def test_trapezoidSimplest(self):\n",
     "        segA_1 = (0,0)\n",
@@ -397,7 +377,7 @@
     "        segB_1 = (1,1)\n",
     "        segB_2 = (2,0)\n",
     "        \n",
-    "        assertEqual(1.5, computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1.5\n",
+    "        self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1.5\n",
     "        \n",
     "    def test_trapezoidNegative(self):\n",
     "        segA_1 = (0,0)\n",
@@ -405,7 +385,7 @@
     "        segB_1 = (-1,-1)\n",
     "        segB_2 = (-2,0)\n",
     "        \n",
-    "        assertEqual(1.5, computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1.5\n",
+    "        self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1.5\n",
     "        \n",
     "    def test_trapezoidNegativePositive(self):\n",
     "        segA_1 = (-1,-1)\n",
@@ -413,11 +393,65 @@
     "        segB_1 = (1,1)\n",
     "        segB_2 = (2,-1)\n",
     "        \n",
-    "        assertEqual(10.5, computeArea(segA_1, segA_2, segB_1, segB_2))# expected 10.5\n",
-    "        \n",
-    "# launch unit tests\n",
-    "unittest.main()"
+    "        self.assertEqual(10.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 10.5\n",
+    "        "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__unittest:__ TestSuite "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "....\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 4 tests in 0.005s\n",
+      "\n",
+      "OK\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<unittest.runner.TextTestResult run=4 errors=0 failures=0>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# initialisation\n",
+    "loader = unittest.TestLoader()\n",
+    "myTestSuite = unittest.TestSuite()\n",
+    "# add tests\n",
+    "#myTestSuite.addTests(loader.loadTestsFromTestCase(TestComputeArea))\n",
+    "#myTestSuite.addTests(loader.loadTestsFromTestCase(TestOrthoProjection))\n",
+    "#myTestSuite.addTests(loader.loadTestsFromTestCase(TestIntersection))\n",
+    "myTestSuite.addTests(loader.loadTestsFromTestCase(TestPathLength))\n",
+    "#myTestSuite.addTests(loader.loadTestsFromTestCase(TestTrajectoryError))\n",
+    "# run!\n",
+    "runner = unittest.TextTestRunner()\n",
+    "runner.run(myTestSuite)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
