Written intersection function

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -92,17 +92,47 @@
     "    return: intersect. A tuple, the coordinates of the intersection or null.\n",
     "    Remark : if the intersection is not in the two segments, returns None.\n",
     "    \"\"\"\n",
-    "    intersect = None\n",
+    "\n",
     "    # First case : the two lines are vertical\n",
+    "    if (x_1[0] == x_2[0] and y_1[0]  == y_2[0]) :\n",
+    "        intersect = None\n",
     "    \n",
     "    # Second case : only the first line is vertical\n",
+    "    elif x_1[0] == x_2[0] :\n",
+    "        a = (y_1[1]-y_2[1])/(y_1[0]-y_2[0])\n",
+    "        b = y_2[1] - a * y_2[0]\n",
+    "        intersect = (x_1[0],a*x_1[0] + b)\n",
     "    \n",
-    "    # Second case : only the second line is vertical\n",
+    "    # Third case : only the second line is vertical\n",
+    "    elif y_1[0]  == y_2[0] :\n",
+    "        intersect = intersection(y_1,y_2,x_1,x_2)\n",
     "    \n",
-    "    # Third case : general case\n",
-    "    ## express the two lines' equations, solve the system\n",
+    "    # Last case : general case\n",
+    "    else :\n",
+    "        a_x = (x_1[1] - x_2[1])/(x_1[0] - x_2[0])\n",
+    "        b_x = x_1[1] - a_x * x_1[0]\n",
+    "        a_y = (y_1[1] - y_2[1])/(y_1[0] - y_2[0])\n",
+    "        b_y = y_1[1] - a_y * y_1[0]\n",
+    "        \n",
+    "        if a_x == a_y :\n",
+    "            # Case where the lines are parallel\n",
+    "            intersect = None\n",
+    "        \n",
+    "        else :\n",
+    "            #The equations are\n",
+    "            #y = a_x*x + b_x\n",
+    "            #y = a_y*x + b_y\n",
+    "            # The solution is the inverted matrix\n",
+    "            intersect = ( (b_y-b_x)/(a_y-a_x),\\\n",
+    "                          (b_y * a_x - b_x * a_y)/(a_y - a_x) )\n",
     "    \n",
     "    # If a point is found, check if it belongs to the segments and not only the lines (x_1[0]<intersect[0]<x_2[0] or...)\n",
+    "    if intersect :\n",
+    "        if !( intersect[0] >= min(x_1[0],x_2[0]) and intersect[0] <= max(x_1[0],x_2[0])\\\n",
+    "          and intersect[1] >= min(x_1[1],x_2[1]) and intersect[1] <= max(x_1[1],x_2[1])\\ # Checked if it is in the x-segment\n",
+    "          and intersect[0] >= min(y_1[0],y_2[0]) and intersect[0] <= max(y_1[0],y_2[0])\\\n",
+    "          and intersect[1] >= min(y_1[1],y_2[1]) and intersect[1] <= max(y_1[1],y_2[1])) # Checked if it is in the y-segment \n",
+    "            intersect = None\n",
     "    \n",
     "    return intersect\n",
     "\n",
@@ -134,8 +164,6 @@
     "        point = np.dot(lin.inv(mat)*,np.array([-b,-c])\n",
     "\n",
     "        newPoint = (point[0],point[1])\n",
-    "        \n",
-    "    newPoint = (0,0)\n",
     "    \n",
     "    ## express the line passing by x_1 and x_2\n",
     "    ## line = (x_2[1]-x_1[1])/(x_2[0]-x_1[0])\n",
