--- a/solution.ipynb
+++ b/solution.ipynb
@@ -145,7 +145,7 @@
     "    \"\"\"\n",
     "    \n",
     "    if x_1[0] == x_2[0] :\n",
-    "    # First case : the line containing x_1 and x_2 is vertical\n",
+    "        # First case : the line containing x_1 and x_2 is vertical\n",
     "        newPoint = (x_1[0],y[1])\n",
     "        \n",
     "    else :\n",
@@ -161,25 +161,47 @@
     "        # a*x - y = -b\n",
     "        # -x + a*y = -c\n",
     "        mat = np.array([a,-1],[-1,a])\n",
-    "        point = np.dot(lin.inv(mat)*,np.array([-b,-c])\n",
-    "\n",
+    "        # Not invertible if a = +- 1 : ???\n",
+    "        point = np.dot(lin.inv(mat)*,np.array([-b,-c]))\n",
     "        newPoint = (point[0],point[1])\n",
     "    \n",
     "    ## express the line passing by x_1 and x_2\n",
     "    ## line = (x_2[1]-x_1[1])/(x_2[0]-x_1[0])\n",
     "    \n",
     "    return newPoint\n",
+    "                       \n",
     "\n",
     "\n",
     "def computeArea(x_1, x_2, y_1, y_2):\n",
+    "                       \n",
     "    \"\"\" \n",
     "    arg1,2 x_i: A tuple, the coordinates of a point on the theoretical trajectory\n",
     "    arg3,4 y_i: A tuple, the coordinates of a point on the experimental trajectory\n",
     "    return: area. An int, the area of the figure formed by the 4 coordinates\n",
     "    \"\"\"\n",
+    "    #Cases of triangles\n",
+    "    if x_1 == y_1 :\n",
+    "        # The triangle is formed by the segments x_1,x_2 and x_2,y_2\n",
+    "        area = seg_length(x_1,x_2) * seg_length(x_2,y_2) / 2\n",
+    "    elif x_2 == y_2 :\n",
+    "        area = seg_length(x_1,y_1) * seg_length(x_1,x_2)/2\n",
+    "                              \n",
     "    # Assert the arguments really form a trapezoid, with (x_1,y_1) being parallel with (x_2,y_2)\n",
-    "    \n",
-    "                       \n",
+    "    else :\n",
+    "        # Always check they are parallel\n",
+    "        # Case of vertical lines \n",
+    "        if x_1[0] == y_1[0]:\n",
+    "            assert x_2[0] == y_2[0]\n",
+    "            area = seg_length(x_1,x_2) * 0.5 * seg_length(x_1,y_1) * seg_length(x_2,y_2)\n",
+    "        elif x_2[0] == y_2[0]:\n",
+    "            assert x_1[0] == y_1[0]\n",
+    "            area = seg_length(x_1,x_2) * 0.5 * seg_length(x_1,y_1) * seg_length(x_2,y_2)\n",
+    "            \n",
+    "        else :\n",
+    "            # General case\n",
+    "            assert((y_1[1]-x_1[1])/(y_1[0]-x_1[0]) == (x_2[1]-y_2[1])/(x_2[0]-y_2[0]))\n",
+    "            area = seg_length(x_1,x_2) * 0.5 * seg_length(x_1,y_1) * seg_length(x_2,y_2)\n",
+    "            \n",
     "    ## Particular case where the xs are the same : vertical lines\n",
     "    \n",
     "    \n",
