advancements on the error-algorythm

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -46,22 +46,71 @@
     "    arg2 coordExp: a list of tuples (x,y). The points received from the \"indoors-gps\"\n",
     "    return: error, the total area difference betweeen the theoretical trajectory and the experimental one divided by the distance.\n",
     "    \"\"\"\n",
-    "    # compute total path length\n",
-    "    totalLength = path_length(coordTh)\n",
+    "    ## assume the gps knows the exact start and end of the theoretical path:\n",
+    "    if coordTh[0] != coordExp[0]:\n",
+    "        coordExp = [coordTh[0]] + [coordExp]\n",
+    "    if coordTh[-1] != coordExp[-1]:\n",
+    "        coordExp.append(coordTh[-1])\n",
+    "        \n",
+    "    # initialize values:\n",
+    "    area = 0 # the total area between the theoretical and experimental paths\n",
+    "    distance = path_length(coordTh) # total theoretical path length\n",
+    "    j = 0 # iterator over the experimental path\n",
+    "    i = 0 # iterator over the theoretical path\n",
     "    \n",
+    "    # start iterations:\n",
+    "    while i+1 <= len(coordTh) and j+1 <= len(coordexp):\n",
+    "        # we work on a subsegment [coordTh[i], coordTh[i+1]] \n",
+    "        \n",
+    "        # search for an intersection:\n",
+    "        intersectPoint = intersection(coordTh[i], coordTh[i+1], coordexp[j], coordexp[j+1])\n",
+    "        # compute the orthogonal projections of the experimental points on the subsegment\n",
+    "        ort1 = ortogonalProjection(coordTh[i], coordTh[i+1], coordexp[j])\n",
+    "        ort2 = ortogonalProjection(coordTh[i], coordTh[i+1], coordexp[j+1]) \n",
+    "        \n",
+    "        if intersectPoint:\n",
+    "            if intersectPoint == coordTh[i+1] == coordexp[j]:\n",
+    "                # we're outside of the subsegment\n",
+    "                i += 1 # advance along the theoretical path\n",
+    "            \n",
+    "            elif intersectPoint == coordTh[i]:\n",
+    "                ## TODO\n",
+    "                j += 1 # advance along the experimental path\n",
+    "            \n",
+    "            elif intersectPoint == coordTh[i+1]:\n",
+    "                ## TODO\n",
+    "                j += 1 # advance along the experimental path\n",
+    "            \n",
+    "            else:\n",
+    "                if ort1:\n",
+    "                    area += computeArea(ort1, intersectPoint, coordexp[j], intersectPoint)\n",
+    "                else:\n",
+    "                    ## TODO\n",
+    "                if ort1:\n",
+    "                    area += computeArea(intersectPoint, ort2, intersectPoint, coordexp[j+1])\n",
+    "                else:\n",
+    "                    ## TODO\n",
+    "                j += 1 # advance along the experimental path  \n",
+    "        else:      \n",
+    "            if ort1 and ort2: ## the points ort1, ort2, coordexp[j], coordexp[j+1] form a trapezoid\n",
+    "                area += computeArea(ort1, ort2, coordexp[j], coordexp[j+1])\n",
+    "                j += 1 # advance along the experimental path\n",
+    "            else:\n",
+    "                ## TODO\n",
+    "                i += 1 # advance along the theoretical path\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    ######### OLD:\n",
     "    # create intermediary points the ortogonal-projection to the theoretical trajectory\n",
-    "    \n",
-    "    # create intermediary points at the interjections of the two trajectories\n",
-    "    \n",
+    "    # create intermediary points at the interjections of the two trajectories \n",
     "    # identify trapezoid -> two points on the theoretical trajectory, 2 points on the experiemental trajcetory\n",
-    "    \n",
     "    # add the area of the trapezoid to the total error.\n",
-    "    \n",
     "    # repeat until you the whole trajectory is computed\n",
+    "    ###########\n",
     "    \n",
-    "    error = area / distance\n",
-    "    \n",
-    "    return error\n",
+    "    return area / distance\n",
     "\n",
     "\n",
     "def seg_length(x_1,x_2):\n",
