further advances on the main algorithm

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -64,6 +64,7 @@
     "        \n",
     "        # search for an intersection:\n",
     "        intersectPoint = intersection(coordTh[i], coordTh[i+1], coordexp[j], coordexp[j+1])\n",
+    "        \n",
     "        # compute the orthogonal projections of the experimental points on the subsegment\n",
     "        ort1 = ortogonalProjection(coordTh[i], coordTh[i+1], coordexp[j])\n",
     "        ort2 = ortogonalProjection(coordTh[i], coordTh[i+1], coordexp[j+1]) \n",
@@ -71,45 +72,37 @@
     "        if intersectPoint:\n",
     "            if intersectPoint == coordTh[i+1] == coordexp[j]:\n",
     "                # we're outside of the subsegment\n",
-    "                i += 1 # advance along the theoretical path\n",
-    "            \n",
-    "            elif intersectPoint == coordTh[i]:\n",
-    "                ## TODO\n",
-    "                j += 1 # advance along the experimental path\n",
-    "            \n",
-    "            elif intersectPoint == coordTh[i+1]:\n",
-    "                ## TODO\n",
-    "                j += 1 # advance along the experimental path\n",
-    "            \n",
+    "                i += 1 # advance along the theoretical path       \n",
     "            else:\n",
-    "                if ort1:\n",
-    "                    area += computeArea(ort1, intersectPoint, coordexp[j], intersectPoint)\n",
-    "                else:\n",
-    "                    ## TODO\n",
-    "                if ort1:\n",
-    "                    area += computeArea(intersectPoint, ort2, intersectPoint, coordexp[j+1])\n",
-    "                else:\n",
-    "                    ## TODO\n",
+    "                # Before the intersection:\n",
+    "                # the points form the right triangle -> ort1, intersectPoint, coordexp[j]  \n",
+    "                base = seg_length(coordexp[j], intersectPoint)\n",
+    "                height =  seg_length(coordTh[i], ortogonalProjection(coordexp[j], intersectPoint, coordTh[i]))\n",
+    "                area += areaRightTriangle(base, height)\n",
+    "                \n",
+    "                # After the intersection:\n",
+    "                # the points form the right triangle -> intersectPoint, coordth[i+1], coordexp[i+1]\n",
+    "                base = seg_length(coordexp[j+1], intersectPoint)\n",
+    "                height =  seg_length(coordTh[i+1], ortogonalProjection(coordexp[j+1], intersectPoint, coordTh[i]))\n",
+    "                areaRightTriangle(base, height)\n",
+    "                \n",
     "                j += 1 # advance along the experimental path  \n",
     "        else:      \n",
-    "            if ort1 and ort2: ## the points ort1, ort2, coordexp[j], coordexp[j+1] form a trapezoid\n",
+    "            if ort1 == and ort2:\n",
     "                area += computeArea(ort1, ort2, coordexp[j], coordexp[j+1])\n",
     "                j += 1 # advance along the experimental path\n",
+    "            elif ort1:\n",
+    "                # area is given by the triangle -> exp[j], ort1, exp[j+1]\n",
+    "                #              and the triangle -> ort1, exp[j+1], th[i+1]\n",
+    "                pass\n",
+    "            elif ort2:\n",
+    "                # area is given by the triangle -> exp[j], th[i], exp[j+1]\n",
+    "                #              and the triangle -> th[i], exp[j+1], ort2\n",
+    "                pass\n",
     "            else:\n",
-    "                ## TODO\n",
+    "                pass\n",
     "                i += 1 # advance along the theoretical path\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "    ######### OLD:\n",
-    "    # create intermediary points the ortogonal-projection to the theoretical trajectory\n",
-    "    # create intermediary points at the interjections of the two trajectories \n",
-    "    # identify trapezoid -> two points on the theoretical trajectory, 2 points on the experiemental trajcetory\n",
-    "    # add the area of the trapezoid to the total error.\n",
-    "    # repeat until you the whole trajectory is computed\n",
-    "    ###########\n",
-    "    \n",
+    "                \n",
     "    return area / distance\n",
     "\n",
     "\n",
@@ -180,7 +173,7 @@
     "        if !( intersect[0] >= min(x_1[0],x_2[0]) and intersect[0] <= max(x_1[0],x_2[0])\\\n",
     "          and intersect[1] >= min(x_1[1],x_2[1]) and intersect[1] <= max(x_1[1],x_2[1])\\ # Checked if it is in the x-segment\n",
     "          and intersect[0] >= min(y_1[0],y_2[0]) and intersect[0] <= max(y_1[0],y_2[0])\\\n",
-    "          and intersect[1] >= min(y_1[1],y_2[1]) and intersect[1] <= max(y_1[1],y_2[1])) # Checked if it is in the y-segment \n",
+    "          and intersect[1] >= min(y_1[1],y_2[1]) and intersect[1] <= max(y_1[1],y_2[1])): # Checked if it is in the y-segment \n",
     "            intersect = None\n",
     "    \n",
     "    return intersect\n",
@@ -221,7 +214,7 @@
     "                       \n",
     "\n",
     "\n",
-    "def computeArea(x_1, x_2, y_1, y_2):\n",
+    "def computeArea(x_1, x_2, y_1, y_2): # TODO: retirer cas des triangles.\n",
     "                       \n",
     "    \"\"\" \n",
     "    arg1,2 x_i: A tuple, the coordinates of a point on the theoretical trajectory\n",
@@ -266,7 +259,17 @@
     "    \n",
     "    # case 3: all point distinct -> trapezoid\n",
     "    \n",
-    "    return area"
+    "    return area\n",
+    "\n",
+    "def areaRightTriangle(base, height):\n",
+    "    \"\"\"\n",
+    "    Computes the area of a right triangle.\n",
+    "    \n",
+    "    arg1: base. A numeral, the length of the basis of the triangle \n",
+    "    arg2: height. A numeral, the length of the basis of the triangle\n",
+    "    return: the area of the rectangle\n",
+    "    \"\"\"\n",
+    "    return np.abs((base * height) / 2)"
    ]
   }
  ],
