fix(test.ipynb): Written tests for RightTriangle ; minor changes to solution.ipynb

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -88,7 +88,7 @@
     "                \n",
     "                j += 1 # advance along the experimental path  \n",
     "        else:      \n",
-    "            if ort1 == and ort2:\n",
+    "            if ort1 and ort2:\n",
     "                area += computeArea(ort1, ort2, coordexp[j], coordexp[j+1])\n",
     "                j += 1 # advance along the experimental path\n",
     "            elif ort1:\n",
@@ -170,10 +170,10 @@
     "    \n",
     "    # If a point is found, check if it belongs to the segments and not only the lines (x_1[0]<intersect[0]<x_2[0] or...)\n",
     "    if intersect :\n",
-    "        if !( intersect[0] >= min(x_1[0],x_2[0]) and intersect[0] <= max(x_1[0],x_2[0])\\\n",
-    "          and intersect[1] >= min(x_1[1],x_2[1]) and intersect[1] <= max(x_1[1],x_2[1])\\ # Checked if it is in the x-segment\n",
-    "          and intersect[0] >= min(y_1[0],y_2[0]) and intersect[0] <= max(y_1[0],y_2[0])\\\n",
-    "          and intersect[1] >= min(y_1[1],y_2[1]) and intersect[1] <= max(y_1[1],y_2[1])): # Checked if it is in the y-segment \n",
+    "        if !( (intersect[0] >= min(x_1[0],x_2[0])) and (intersect[0] <= max(x_1[0],x_2[0]))\\\n",
+    "          and (intersect[1] >= min(x_1[1],x_2[1])) and (intersect[1] <= max(x_1[1],x_2[1]))\\ # Checked if it is in the x-segment\n",
+    "          and (intersect[0] >= min(y_1[0],y_2[0])) and (intersect[0] <= max(y_1[0],y_2[0]))\\\n",
+    "          and (intersect[1] >= min(y_1[1],y_2[1])) and (intersect[1] <= max(y_1[1],y_2[1]))): # Checked if it is in the y-segment \n",
     "            intersect = None\n",
     "    \n",
     "    return intersect\n",
@@ -293,5 +293,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
