--- a/test.ipynb
+++ b/test.ipynb
@@ -14,18 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'solution'",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (solution.py, line 162)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-2d513dd3e15a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0munittest\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0msolution\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msl\u001b[0m \u001b[1;31m## the solution notebook exported as a script\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'solution'"
+      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[0;32m\"D:\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py\"\u001b[0m, line \u001b[0;32m3325\u001b[0m, in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-3-2d513dd3e15a>\"\u001b[1;36m, line \u001b[1;32m7\u001b[1;36m, in \u001b[1;35m<module>\u001b[1;36m\u001b[0m\n\u001b[1;33m    import solution as sl ## the solution notebook exported as a script\u001b[0m\n",
+      "\u001b[1;36m  File \u001b[1;32m\"D:\\Université de Lille\\M1\\Refresher in Computer Science\\CSRefresh_project\\CSRefresh_Project\\solution.py\"\u001b[1;36m, line \u001b[1;32m162\u001b[0m\n\u001b[1;33m    if !( (intersect[0] >= min(x_1[0],x_2[0])) and (intersect[0] <= max(x_1[0],x_2[0]))          and (intersect[1] >= min(x_1[1],x_2[1])) and (intersect[1] <= max(x_1[1],x_2[1]))\\ # Checked if it is in the x-segment\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -334,7 +334,7 @@
    "source": [
     "class TestComputeArea(unittest.TestCase):\n",
     "    \"\"\"\n",
-    "    Unit testing code for the area computation brick.\n",
+    "    Unit testing code for the area computation brick in the case of a trapezium.\n",
     "    \"\"\"\n",
     "\n",
     "    def test_identicalSegments(self):\n",
@@ -388,6 +388,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TestAreaRightTriangle(unittest.TestCase):\n",
+    "    \"\"\"\n",
+    "    Unit testing for the area computation brick in the case of a right triangle\n",
+    "    \"\"\"\n",
+    "    def test_flatTriangle(self):\n",
+    "        base = 0\n",
+    "        height = 3\n",
+    "        \n",
+    "        self.assertEqual(0,sl.areaRightTriangle(base,height))\n",
+    "    \n",
+    "    def test_otherFlatTriangle(self):\n",
+    "        base = 3\n",
+    "        height = 5\n",
+    "        \n",
+    "        self.assertEqual(0,sl.areaRightTriangle(base,height))\n",
+    "    \n",
+    "    def test_normalTriangle(self):\n",
+    "        base = 3\n",
+    "        height = 5\n",
+    "        \n",
+    "        self.assertEqual(15,sl.areaRightTriangle(base,height))\n",
+    "    \n",
+    "    def test_negativeDistance(self):\n",
+    "        base = -3\n",
+    "        height = 5\n",
+    "        \n",
+    "        self.assertEqual(15,sl.areaRightTriangle(base,height))\n",
+    "        \n",
+    "    def test_otherNegativeDistance(self):\n",
+    "        base = 3\n",
+    "        height = -5\n",
+    "        \n",
+    "        self.assertEqual(15,sl.areaRightTriangle(base,height))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -404,9 +445,10 @@
     "loader = unittest.TestLoader()\n",
     "myTestSuite = unittest.TestSuite()\n",
     "# add tests\n",
-    "#myTestSuite.addTests(loader.loadTestsFromTestCase(TestComputeArea))\n",
-    "#myTestSuite.addTests(loader.loadTestsFromTestCase(TestOrthoProjection))\n",
-    "#myTestSuite.addTests(loader.loadTestsFromTestCase(TestIntersection))\n",
+    "myTestSuite.addTests(loader.loadTestsFromTestCase(TestComputeArea))\n",
+    "#myTestSuite.addTests(loader.loadTestFromTestCase(areaRightTriangle))\n",
+    "myTestSuite.addTests(loader.loadTestsFromTestCase(TestOrthoProjection))\n",
+    "myTestSuite.addTests(loader.loadTestsFromTestCase(TestIntersection))\n",
     "myTestSuite.addTests(loader.loadTestsFromTestCase(TestPathLength))\n",
     "#myTestSuite.addTests(loader.loadTestsFromTestCase(TestTrajectoryError))\n",
     "# run!\n",
@@ -449,5 +491,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
