--- a/test.ipynb
+++ b/test.ipynb
@@ -14,18 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (solution.py, line 162)",
+     "evalue": "unexpected character after line continuation character (solution.py, line 162)",
      "output_type": "error",
      "traceback": [
       "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
       "  File \u001b[0;32m\"D:\\Anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py\"\u001b[0m, line \u001b[0;32m3325\u001b[0m, in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-3-2d513dd3e15a>\"\u001b[1;36m, line \u001b[1;32m7\u001b[1;36m, in \u001b[1;35m<module>\u001b[1;36m\u001b[0m\n\u001b[1;33m    import solution as sl ## the solution notebook exported as a script\u001b[0m\n",
-      "\u001b[1;36m  File \u001b[1;32m\"D:\\Université de Lille\\M1\\Refresher in Computer Science\\CSRefresh_project\\CSRefresh_Project\\solution.py\"\u001b[1;36m, line \u001b[1;32m162\u001b[0m\n\u001b[1;33m    if !( (intersect[0] >= min(x_1[0],x_2[0])) and (intersect[0] <= max(x_1[0],x_2[0]))          and (intersect[1] >= min(x_1[1],x_2[1])) and (intersect[1] <= max(x_1[1],x_2[1]))\\ # Checked if it is in the x-segment\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-7-2d513dd3e15a>\"\u001b[1;36m, line \u001b[1;32m7\u001b[1;36m, in \u001b[1;35m<module>\u001b[1;36m\u001b[0m\n\u001b[1;33m    import solution as sl ## the solution notebook exported as a script\u001b[0m\n",
+      "\u001b[1;36m  File \u001b[1;32m\"D:\\Université de Lille\\M1\\Refresher in Computer Science\\CSRefresh_project\\CSRefresh_Project\\solution.py\"\u001b[1;36m, line \u001b[1;32m162\u001b[0m\n\u001b[1;33m    if not ( (intersect[0] >= min(x_1[0],x_2[0])) and (intersect[0] <= max(x_1[0],x_2[0]))                and (intersect[1] >= min(x_1[1],x_2[1])) and (intersect[1] <= max(x_1[1],x_2[1]))\\\u001b[0m\n\u001b[1;37m                                                                                                                                                                                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected character after line continuation character\n"
      ]
     }
    ],
